[project]
name = "python_package"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python_package"]
authors = [{ name = "Author Me", email = "author@example.com" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dynamic = ["description"]

dependencies = []

[build-system]
requires = ["flit_core~=3.2"]
build-backend = "flit_core.buildapi"

